[gd_scene load_steps=9 format=3 uid="uid://cs7m28nyoegp1"]

[ext_resource type="Script" uid="uid://du72xby0e14yb" path="res://Scenes/enemys/spikeball.gd" id="1_dt2s3"]
[ext_resource type="Texture2D" uid="uid://bpoq11rncwtuf" path="res://Assets/Traps/Spiked Ball/Spiked Ball.png" id="2_dt2s3"]
[ext_resource type="PackedScene" uid="uid://csvit34mhg5t1" path="res://Scenes/enemys/one_chain.tscn" id="2_tsn8h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dt2s3"]
radius = 6.5192

[sub_resource type="CircleShape2D" id="CircleShape2D_tsn8h"]
radius = 12.3693

[sub_resource type="Animation" id="Animation_8xyng"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_mdn38"]
resource_name = "spikedball"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ovjp"]
_data = {
&"RESET": SubResource("Animation_8xyng"),
&"spikedball": SubResource("Animation_mdn38")
}

[node name="spikeball" type="Node2D"]
scale = Vector2(2, 2)
script = ExtResource("1_dt2s3")

[node name="onechain" parent="." instance=ExtResource("2_tsn8h")]

[node name="SpikedBall" type="Sprite2D" parent="."]
position = Vector2(0, 8)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_dt2s3")

[node name="area_colision_with_map" type="Area2D" parent="SpikedBall"]
position = Vector2(0, -16)
scale = Vector2(2, 2)
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/area_colision_with_map"]
visible = false
position = Vector2(0, 8.5)
shape = SubResource("CircleShape2D_dt2s3")

[node name="damage_zone" type="Area2D" parent="SpikedBall"]
visible = false
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpikedBall/damage_zone"]
visible = false
shape = SubResource("CircleShape2D_tsn8h")

[node name="raycast_floor_detection" type="RayCast2D" parent="."]
visible = false
target_position = Vector2(0, 18.5)

[node name="SafeTime" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="animation_rotation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_4ovjp")
}

[connection signal="body_entered" from="SpikedBall/area_colision_with_map" to="." method="_on_area_colision_with_map_body_entered"]
[connection signal="timeout" from="SafeTime" to="." method="_on_safe_time_timeout"]
